# synth-light

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE.txt  README.md  deny.toml
scripts/: analyze.py  common.py  make_heatmap.py  make_table.py
src/: algorithm.rs  common.rs  generator.rs  lib.rs  main.rs  model.rs  runner.rs
src/promela/: Algorithms.pml  MainGathering.pml  Robots.pml  Schedulers.pml  Types.pml  mod.rs
